Add onboarding notifications (#3479)
* Add scaffolding for onboarding notifications

* Add missing files

* Add to sidekiq

* Add stub tests

* Add onboarding communication preference

* Add tests for community onboarding

* Fundraising notification

* Gracefully handle errors

* Cleanup schema

* Update app/jobs/create_onboarding_notifications_job.rb

* Naming refactoring

* Add tests for notifications

* Update db/migrate/20230216210634_add_index_on_users_created_at.rb

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Update config/locales/communication_preferences/en.yml

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Tweaks

* Optimize repeated notification checks

* Use I18n.t in tests

* WIP copy

* WIP

* Fix tests

* Apply suggestions from code review

* Refine copy

* Improve copy further

* Fix preview

* Revert refactoring

* Renamed onboarding_fundraising to onboarding_insiders

* Further tweaks

* Add text based versions

* Apply suggestions from code review

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

* Apply suggestions from code review

* Remove bad test

* Fix test

* Fix test

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/config/sidekiq-schedule.yml
+++ b/config/sidekiq-schedule.yml
@@ -110,6 +110,12 @@ update_last_hour_metrics:
   class: "UpdateLastHourMetricsJob"
   queue: metrics
 
+# Every 30 minutes
+create_onboarding_notifications:
+  cron: "*/30 * * * *"
+  class: "CreateOnboardingNotificationsJob"
+  queue: background
+
 # Every day at noon
 update_last_week_metrics:
   cron: "0 12 * * *"
