--- a/config/sidekiq-schedule.yml
+++ b/config/sidekiq-schedule.yml
@@ -64,9 +64,9 @@ sync_team_members:
   class: "SyncTeamMembersJob"
   queue: dribble
 
-sync_sponsors:
+sync_payments:
   cron: "0 1 * * 3"
-  class: "SyncSponsorsJob"
+  class: "SyncPaymentsJob"
   queue: dribble
 
 # 1am Thursday
